# phone-rust

./: Cargo.toml  README.md  updateapi
.openapi-generator/: FILES
docs/: AlarmCall.md  AlarmCallData.md  AlarmCallState.md  AlarmCallUpdate.md  AnnounceSwitchtime.md  AudioSnippet.md  AudioSnippetApi.md  AudioSnippetData.md  Block.md  BlockApi.md  CallApi.md  CallState.md  CodeCallRequest.md  CodeCallResult.md  InternalApi.md  LegacyQueue.md  ListWrapperAlarmCall.md  ListWrapperAlarmCallDataInner.md  ListWrapperNumberConfiguration.md  ListWrapperNumberConfigurationDataInner.md  ListWrapperQueueCaller.md  ListWrapperQueueCallerDataInner.md  ListWrapperQueueOpening.md  ListWrapperQueueOpeningDataInner.md  ListWrapperVoicemail.md  ListWrapperVoicemailDataInner.md  NewAlarmCall.md  NewAudioSnippet.md  NewBlock.md  NewNumberConfiguration.md  NewQueueCaller.md  NewQueueDestination.md  NewQueueNumber.md  NewQueueOpening.md  NewVoicemail.md  NumberConfiguration.md  NumberConfigurationApi.md  PhoneNumber.md  Queue.md  QueueApi.md  (+15 more)
src/apis/: audio_snippet_api.rs  block_api.rs  call_api.rs  configuration.rs  internal_api.rs  mod.rs  number_configuration_api.rs  queue_api.rs  status_api.rs  voicemail_api.rs
src/models/: alarm_call.rs  alarm_call_data.rs  alarm_call_state.rs  alarm_call_update.rs  announce_switchtime.rs  audio_snippet.rs  audio_snippet_data.rs  block.rs  call_state.rs  code_call_request.rs  code_call_result.rs  legacy_queue.rs  list_wrapper_alarm_call.rs  list_wrapper_alarm_call_data_inner.rs  list_wrapper_number_configuration.rs  list_wrapper_queue_caller.rs  (+32 more)
