[package]
name = "p7m-phone"
description = "Rust bindings for the telephone and queue services API of P7M"
version = "0.3.3"
authors = ["OpenAPI Generator team and contributors"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/projekt7m/phone-rust"

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
url = "^2.2"
[dependencies.reqwest]
version = "^0.11"
default-features = false
features = ["json", "multipart", "rustls-tls"]

[dev-dependencies]
